# sharepoint-docs-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  OAUTH_DESIGN.md  ONEDRIVE_IMPLEMENTATION_SPEC.md  README.md  README_ja.md  compose.yaml  pyproject.toml  scripts.py
.claude/: settings.local.json
.claude/skills/: quality-check.md  sync-docs.md
.claude/skills/quality-check/: SKILL.md
.claude/skills/sync-docs/: SKILL.md
.github/workflows/: ci.yml
docs/: development.md  development_ja.md  setup.md  setup_ja.md  troubleshooting.md  troubleshooting_ja.md  usage.md  usage_ja.md
src/: config.py  error_messages.py  main.py  server.py  sharepoint_auth.py  sharepoint_excel.py  sharepoint_search.py
src/excel/: __init__.py  merged_cell_handler.py  pane_manager.py  range_calculator.py  style_extractor.py
tests/: conftest.py  test_config.py  test_error_messages.py  test_excel_merged_cell_handler.py  test_excel_range_calculator.py  test_excel_style_extractor.py  test_server.py  test_sharepoint_excel.py  test_sharepoint_search.py  test_token_support.py
tests/excel/: test_excel_pane_manager.py  test_excel_range_calculator.py
