[project]
name = "sharepoint-docs-mcp"
version = "0.1.0"
description = "SharePoint Document Search MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.7",
    "fastmcp>=2.12.3",
    "httpx>=0.28.1",
    "mcp[cli]>=1.14.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "typer[all]>=0.17.4",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "ty>=0.0.1a16",
]

[project.scripts]
sharepoint-docs-mcp = "src.main:app"
lint = "scripts:lint"
fmt = "scripts:format"
fix = "scripts:fix"
typecheck = "scripts:type_check"
check = "scripts:check"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]


[tool.ty]
# ty設定 - 高速型チェッカー
[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = [".venv/**"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B021",  # f-string used as docstring
    "C901",  # too complex
    "UP035", # typing imports should be used for type annotations
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
