[project]
name = "sharepoint-docs-mcp"
version = "0.5.1"
description = "SharePoint Document Search MCP Server"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "ncdcdev", email = "contact@ncdc.co.jp" }]
license = { file = "LICENSE" }
keywords = ["mcp", "sharepoint", "search", "protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=45.0.7",
    "fastmcp>=2.12.4",
    "httpx>=0.28.1",
    "mcp[cli]>=1.14.0",
    "openpyxl>=3.1.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "typer[all]>=0.17.4",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "ty>=0.0.1a16",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
sharepoint-docs-mcp = "src.main:app"
lint = "scripts:lint"
fmt = "scripts:format"
fix = "scripts:fix"
typecheck = "scripts:type_check"
check = "scripts:check"
test = "scripts:test"

[project.urls]
Homepage = "https://github.com/ncdcdev/sharepoint-docs-mcp"
Repository = "https://github.com/ncdcdev/sharepoint-docs-mcp.git"
Issues = "https://github.com/ncdcdev/sharepoint-docs-mcp/issues"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]


[tool.ty]
# ty設定 - 高速型チェッカー
[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = [".venv/**"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "PLC", # pylint conventions (includes PLC0415: import-outside-toplevel)
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "UP035", # typing imports should be used for type annotations
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["PLC0415"]  # Allow function-level imports in tests for mocking/isolation

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
